Fixes width of connect with metamask button on mobile

--- a/packages/client/src/layout/network-widget.scss
+++ b/packages/client/src/layout/network-widget.scss
@@ -269,6 +269,13 @@
   .network-widget-button {
     position: absolute;
     right: 48px;
+    width: 170px;
+  }
+
+  .network-widget.open {
+    .network-widget-button {
+      width: 160px;
+    }
   }
 
   .network-widget-info {
